fix up margin on smaller

--- a/css/style.css
+++ b/css/style.css
@@ -141,4 +141,7 @@ a:any-link{
     input{
         width: 30vw;
     }
+    .holder{
+        margin: 0 1em;
+    }
 }
